test(sandbox): #213 improve test for UserService